Fix division-by-zero crash if the table has no columns.  Bug 352939, patch by romaxa <romaxa@gmail.com>, r=bernd, sr=bzbarsky